src/assets/css/style.css
/****************** HOME PAGE LAYOUT *************************/
.post-card {
    margin: 16px 0 16px 0;
    position: relative;
    overflow-y: hidden;
}

.see-more-wrapper {
    background-color: inherit;
    position: absolute;
    bottom: 0;
    padding: 4px 0;
    margin-left: -16px;
    width: 100%;
}

/****************** PROBLEM PAGE LAYOUT **********************/
.flag-submit {
    width: 90%;
    display: inline;
}

.problem-submit-button {
    width: 100%;
}

#hint {
    margin-top: 8px;
}

#category-selector {
    display: inline-block!important;
    width: auto!important;
}

#category-selector-container {
    margin-bottom: 0.5rem;
}

@media screen and (min-width: 1000px) {
    #category-selector-container {
        float: right;
    }
}



/****************** SUBMISSIONS PAGE LAYOUT ******************/
@media screen and (min-width: 991px) {
    #submission-search-bottom {
        display: none;
    }
}

@media screen and (max-width: 990px) {
    #submission-search-right {
        display: none;
    }
}

/****************** CONTEST PAGE LAYOUT **********************/
#contest-description-container, #contest-description-container-keep-open {
     position: fixed;
     width: 100%;
     height: 100%;
     background-color: rgb(0, 0, 0, 0.7);
     top: 0;
     left: 0;
}

#contest-problem-description {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    min-height: 320px;
    padding: 16px;
}

#contest-description-close {
    position: absolute;
    top: 4px;
    right: 4px;
}

/****************** MD LIVE PREVIEW **************************/
textarea.md-preview {
    min-height: 400px;
    width: 49%;
}
div.md-preview {
    position: absolute;
    right: 0;
    top: 0;
    width: 50%;
}

/****************** GENERAL DISPLAY **************************/
.table-full-width {
    min-width: 450px;
}

/****************** MISC DISPLAY FIXES ***********************/
.card {
    padding: 16px;
}

.flex {
    display: flex;
}

.icon {
    width: 16px;
}

table {
    table-layout: fixed;
}

main {
    padding-top: 3rem!important;
    padding-bottom: 3rem!important;
}

td {
    word-break: break-word;
}

.pagination {
    overflow-x: auto;
}

.hidden {
    display: none;
}

a {
    text-decoration: none;
}

/****************** COLOURS **********************************/
.white {
    color: #ffffff!important;
}

.black {
    color: #000000!important;
}

.svg-red {
    filter: invert(16%) sepia(100%) saturate(6752%) hue-rotate(1deg) brightness(99%) contrast(117%);
}

.svg-green {
    filter: invert(57%) sepia(58%) saturate(3606%) hue-rotate(83deg) brightness(118%) contrast(125%);
}

/****************** DARK MODE ********************************/
.dark {
    background: #2f2f2f;
    background-color: #2f2f2f;
    color: #fff;
}

.dark .card {
    border: 1px solid rgba(255, 255, 255, .125);
    background-color: #2f2f2f;
}

.dark .form-control:focus {
    background-color: #2f2f2f;
    color: #fff;
}

.dark .form-control {
    background-color: #2f2f2f;
    color: #fff;
}

.dark tr {
    background-color: #2f2f2f;
    color: #fff;
}

.dark tr:hover {
    color: #fff!important;
}

.dark .page-link {
    background-color: #2f2f2f!important;
}

.dark .page-item.active .page-link {
    background-color: #0d6efd!important;
}

.dark-toggle:checked {
    background-color: #2f2f2f;
}

